- Fix navigation z-index on mobile view

--- a/less/page.less
+++ b/less/page.less
@@ -78,7 +78,8 @@
 	margin: 0 auto;
 	width: 100%;
 	top: 0;
-	z-index: 80;
+	z-index: 9999;
+	position: relative;
 	background-color: @black;
 	.box-shadow();
 	a {
